styled header correctly

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
-                    <div class="row align-items-center no-gutters">
+                    <div class="row align-items-center justify-content-between">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="/">
@@ -65,13 +65,6 @@
                                 </nav>
                             </div>
                         </div>
-                                <div class="live_chat_btn">
-                                    <a class="boxed_btn_orange" href="#">
-                                        <i class="fa fa-phone"></i>
-                                        <span>+10 378 467 3672</span>
-                                    </a>
-                                </div>
-                            </div>
                         </div>
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
