--- a/templates/blogPost.html
+++ b/templates/blogPost.html
@@ -38,7 +38,7 @@
       <div class="header-area ">
           <div id="sticky-header" class="main-header-area">
               <div class="container-fluid p-0">
-                  <div class="row align-items-center no-gutters">
+                  <div class="row align-items-center justify-content-between">
                       <div class="col-xl-2 col-lg-2">
                           <div class="logo-img">
                               <a href="index.html">
@@ -63,16 +63,6 @@
                                         {% endif %}
                                     </ul>
                               </nav>
-                          </div>
-                      </div>
-                      <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                          <div class="log_chat_area d-flex align-items-center">
-                              <div class="live_chat_btn">
-                                  <a class="boxed_btn_orange" href="#">
-                                      <i class="fa fa-phone"></i>
-                                      <span>+10 378 467 3672</span>
-                                  </a>
-                              </div>
                           </div>
                       </div>
                       <div class="col-12">
