--- a/templates/search.html
+++ b/templates/search.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" href="{% static 'css/slicknav.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -38,7 +39,7 @@
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
-                    <div class="row align-items-center no-gutters">
+                    <div class="row align-items-center justify-content-between">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
@@ -52,26 +53,31 @@
                                     <ul id="navigation">
                                         <li><a  href="/">home</a></li>
                                         <li><a class="active" href="{% url 'details' %}">Courses</a></li>
+                                         <li><a href="{% url 'blogs' %}">Blog</a></li>
                                         <li><a href="{% url 'contact' %}">Contact</a></li>
-                                        <i class="flaticon-user"></i>
-                                        <li><a href="accounts/form">Sign up</a></li>
+                                        <li>
+                                            <div class="Seach_button">
+                                                <form method = "get" action = "{% url 'search' %}" class="form-inline my-2 my-lg-0">
+                                                    <input class ="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name = "query" style="width:100px"> 
+                                                    <button class= "bg-transparent border-0 text-white" type="submit">
+                                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                                    </button>
+                                                </form>
+                                            </div>
+                                        </li>
+                                        {% if user.is_authenticated %}
+                                            <li><a href="accounts/logout">Logout</a></li> 
+                                        {% else %}
+                                            <li><a href="accounts/login">Sign in</a></li>
+                                        {% endif %}
                                     </ul>
                                 </nav>
                             </div>
                         </div>
-                                <div class="Seach button">
-                                    <form method = "get" action = "{% url 'search' %}" class="form-inline my-2 my-lg-0">
-                                        <input class ="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name = "query"> 
-                                        <button class="btn btn--pill btn--green" type="submit">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
-                        </div>
                     </div>
                 </div>
+            <div class="col-12">
+                <div class="mobile_menu d-block d-lg-none"></div>
             </div>
         </div>
     </header>
