change verbose of course and some basic style

--- a/templates/blogHome.html
+++ b/templates/blogHome.html
@@ -76,10 +76,10 @@
     <!-- header-end -->
     
         <!-- bradcam_area_start -->
-        <div class="bradcam_area breadcam_bg overlay2">
+        <div class="bradcam_area breadcam_bg overlay2" style="height:100vh">
                 <h3>Latest Update</h3>
-            </div>
-            <!-- bradcam_area_end -->
+        </div>
+        <!-- bradcam_area_end -->
 
 
     <!--================Blog Area =================-->
