--- a/templates/blogPost.html
+++ b/templates/blogPost.html
@@ -76,7 +76,7 @@
   <!-- header-end -->
  
      <!-- bradcam_area_start -->
-     <div class="bradcam_area breadcam_bg overlay2">
+     <div class="bradcam_area breadcam_bg overlay2" style="height:100vh">
          <h3>{{post.title}}</h3>
      </div>
      <!-- bradcam_area_end -->
