--- a/templates/courses.html
+++ b/templates/courses.html
@@ -85,7 +85,7 @@
     </header>
     <!-- header-end -->
         <!-- bradcam_area_start -->
-        <div class="bradcam_area breadcam_bg overlay2">
+        <div class="bradcam_area breadcam_bg overlay2" style="height:100vh">
             <h3>Our Courses</h3>
         </div>
         <!-- bradcam_area_end -->
