--- a/templates/index.html
+++ b/templates/index.html
@@ -230,7 +230,7 @@
                                             </div>
                                             <div class="courses_info">
                                                 <span>{{courses.cour_name}}</span>
-                                                <h3><a href="#" title="{{courses.cour_desc}}" style="background-color:#FFFFFF;color:#000000;text-decoration:overline"> {{courses.cour_desc}}</a></h3>
+                                                <h3><a href="#" title="{{courses.cour_desc}}" style="background-color:#FFFFFF;color:#000000;"> {{courses.cour_desc}}</a></h3>
                                                 <div class="star_prise d-flex justify-content-between">
                                                     <div class="star">
                                                         <i class="flaticon-mark-as-favorite-star"></i>
